--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,4 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
 <a href="/celebs/new-celebrity">Create a new Celebrity</a>
+<a href="/celebs/celebrities">Celebrity Overview</a>
