--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,16 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
-<a href="/celebs/new-celebrity">Create a new Celebrity</a>
-<a href="/celebs/celebrities">Celebrity Overview</a>
+<section class="hero section is-halfheight">
+    <h1 class="title is-1">{{title}}</h1>
+    <p class="subtitle is-3">Welcome to {{title}}</p>
+</section>
+<section class="level section is-large">
+    <div class="level-left">
+        <a class="button is-primary level-item" href="/celebs/create">Create a new Celebrity</a>
+        <a class="button level-item" href="/celebs/celebrities">Celebrity Overview</a>
+    </div>
+    <div class="level-right">
+        <a class="button is-primary level-item level-right" href="/movies/create">Create a new Movie</a>
+        <a class="button level-item" href="/movies/movies">Movies Overview</a>
+    </div>
+</section>
+
+
