--- a/views/celebs/new-celebrity.hbs
+++ b/views/celebs/new-celebrity.hbs
@@ -1,10 +1,18 @@
-<h2>Form: </h2>
-<form action="/celebs/create" method="post">
-    <label for="name">Celebrity-Name:</label>
-    <input type="text" name="name" id="name">
-    <label for="occupation">Occupation:</label>
-    <input type="text" name="occupation" id="occupation">
-    <label for="catch-phrase">Catch Phrase:</label>
-    <input type="text" name="catch-phrase" id="catch-phrase">
-    <button type="submit">Create</button>
-</form>
+<h2 class="title is-2">Form:</h2>
+<section class="section">
+    <form class="box" action="/celebs/create" method="post">
+        <div class="field">
+            <label class="label" for="name">Celebrity-Name:</label>
+            <input type="text" name="name" id="name">
+        </div>
+        <div class="field">
+            <label class="label" for="occupation">Occupation:</label>
+            <input type="text" name="occupation" id="occupation">
+        </div>
+        <div class="field">
+            <label class="label" for="catchPhrase">Catch Phrase:</label>
+            <input type="text" name="catchPhrase" id="catchPhrase">
+        </div>
+        <button class="button is-primary" type="submit">Create</button>
+    </form>
+</section>
