--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,9 +11,17 @@
   </head>
 
   <body>
-    <div class="container">
+    <nav class="navbar">
+      <a class="navbar-brand" href="/">Home</a>
+      <div class="navbar-menu">
+        <a class="navbar-item" href="/movies/movies">Movies</a>
+        <a class="navbar-item" href="/celebs/celebrities">Celebrity</a>
+      </div>
+      
+    </nav>
+    <main class="section">
       {{{body}}}
-    </div>
+    </main>
 
     <script src="/javascripts/script.js"></script>
   </body>
